@@ -16,62 +16,73 @@ import io.vertx.mutiny.sqlclient.Row;
 import io.vertx.mutiny.sqlclient.RowSet;
 import io.vertx.mutiny.sqlclient.Tuple;
 
+import javax.annotation.Nonnull;
+import java.io.Serial;
 import java.io.Serializable;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 @JsonInclude(JsonInclude.Include.NON_NULL)
-public class Word implements Serializable {
+public final class Word implements StringIdentification, Marked, Owned, TimeUpdated, Serializable {
 
+    @Serial
     private static final long serialVersionUID = 1026290511346629702L;
 
-    private String word;
+    public static final String NONE = "__NONE__";
 
-    private String userName;
+    private final String word;
 
-    private LocalDateTime createTime;
+    private final String userName;
 
-    private LocalDateTime updateTime;
+    private final LocalDateTime createTime;
 
-    private Boolean enabled;
+    private final LocalDateTime updateTime;
 
-    private Boolean visible;
+    private final boolean enabled;
 
-    private Integer flags;
+    private final boolean visible;
 
-    public static final String SELECT_FROM_DICTIONARY_WORD_WHERE_WORD_$1
-            = "SELECT word, user_name, create_time, update_time, enabled, visible, flags "
-            + "  FROM dictionary.word "
-            + " WHERE word = $1";
+    private final int flags;
 
-    public static final String SELECT_ALL_FROM_DICTIONARY_WORD_ORDER_BY_WORD_ASC
-            = "SELECT word, user_name, create_time, update_time, enabled, visible, flags "
-            + "  FROM dictionary.word "
-            + " ORDER BY word ASC";
+    public static final String SELECT_FROM_DICTIONARY_WORD_WHERE_WORD_$1 = """
+            SELECT word, user_name, create_time, update_time, enabled, visible, flags
+              FROM dictionary.word
+             WHERE word = $1
+            """;
 
-    public static final String INSERT_INTO_DICTIONARY_WORD
-            = "INSERT INTO dictionary.word "
-            + " (word, user_name, create_time, update_time, enabled, visible, flags) "
-            + " VALUES "
-            + " ($1, $2, $3, $4, $5, $6, $7) "
-            + " RETURNING word";
+    public static final String SELECT_ALL_FROM_DICTIONARY_WORD_ORDER_BY_WORD_ASC = """
+            SELECT word, user_name, create_time, update_time, enabled, visible, flags
+              FROM dictionary.word
+             ORDER BY word ASC
+            """;
 
-    public static final String UPDATE_DICTIONARY_WORD_WHERE_WORD_$1
-            = "UPDATE dictionary.word "
-            + " SET "
-            + "  user_name = $2, "
-            + "  create_time = $3, "
-            + "  update_time = $4,"
-            + "  enabled = $5, "
-            + "  visible = $6, "
-            + "  flags = $7 "
-            + " WHERE word = $1 "
-            + " RETURNING word";
+    public static final String INSERT_INTO_DICTIONARY_WORD = """
+            INSERT INTO dictionary.word
+             (word, user_name, create_time, update_time, enabled, visible, flags)
+             VALUES
+             ($1, $2, $3, $4, $5, $6, $7)
+             RETURNING word
+            """;
 
-    public static final String DELETE_FROM_DICTIONARY_WORD_WHERE_WORD_$1
-            = "DELETE FROM dictionary.word "
-            + " WHERE word = $1 "
-            + " RETURNING word";
+    public static final String UPDATE_DICTIONARY_WORD_WHERE_WORD_$1 = """
+           UPDATE dictionary.word SET
+             user_name = $2,
+             create_time = $3,
+             update_time = $4,
+             enabled = $5,
+             visible = $6,
+             flags = $7
+            WHERE word = $1
+            RETURNING word
+           """;
+
+    public static final String DELETE_FROM_DICTIONARY_WORD_WHERE_WORD_$1 = """
+            DELETE FROM dictionary.word
+             WHERE word = $1
+             RETURNING word
+            """;
 
     public static Word from(Row row) {
         return new Word(
@@ -107,7 +118,7 @@ public class Word implements Serializable {
 
     public Uni<String> insert(PgPool client) {
         return client.preparedQuery(INSERT_INTO_DICTIONARY_WORD)
-                .execute(Tuple.of(listOf()))
+                .execute(Tuple.tuple(listOf()))
                 .onItem()
                 .transform(RowSet::iterator)
                 .onItem()
@@ -115,9 +126,8 @@ public class Word implements Serializable {
     }
 
     public Uni<String> update(PgPool client) {
-        updateTime = LocalDateTime.now();
         return client.preparedQuery(UPDATE_DICTIONARY_WORD_WHERE_WORD_$1)
-                .execute(Tuple.of(listOf()))
+                .execute(Tuple.tuple(listOf()))
                 .onItem()
                 .transform(pgRowSet -> pgRowSet.iterator().next().getString("word"));
     }
@@ -129,20 +139,28 @@ public class Word implements Serializable {
                 .transform(pgRowSet -> pgRowSet.iterator().next().getString("word"));
     }
 
-    private List<?> listOf() {
-        return List.of(word, userName, createTime, updateTime, enabled, visible, flags);
+    private List<Object> listOf() {
+        return Arrays.asList(word, userName, createTime, updateTime, enabled, visible, flags);
     }
 
-    public Word() {}
+    public Word() {
+        this.word = NONE;
+        this.userName = null;
+        this.createTime = null;
+        this.updateTime = null;
+        this.enabled = false;
+        this.visible = true;
+        this.flags = 0;
+    }
 
     public Word(
-            String word,
+            @Nonnull String word,
             String userName,
             LocalDateTime createTime,
             LocalDateTime updateTime,
-            Boolean enabled,
-            Boolean visible,
-            Integer flags) {
+            boolean enabled,
+            boolean visible,
+            int flags) {
         this.word = word;
         this.userName = userName;
         this.createTime = createTime;
@@ -150,90 +168,63 @@ public class Word implements Serializable {
         this.enabled = enabled;
         this.visible = visible;
         this.flags = flags;
+    }
+
+    public String getId() {
+        return word;
     }
 
     public String getWord() {
         return word;
     }
 
-    public void setWord(String word) {
-        this.word = word;
-    }
-
     public String getUserName() {
         return userName;
-    }
-
-    public void setUserName(String userName) {
-        this.userName = userName;
     }
 
     public LocalDateTime getCreateTime() {
         return createTime;
     }
 
-    public void setCreateTime(LocalDateTime createTime) {
-        this.createTime = createTime;
-    }
-
     public LocalDateTime getUpdateTime() {
         return updateTime;
     }
 
-    public void setUpdateTime(LocalDateTime updateTime) {
-        this.updateTime = updateTime;
-    }
-
-    public Boolean getEnabled() {
+    public boolean getEnabled() {
         return enabled;
     }
 
-    public void setEnabled(Boolean enabled) {
-        this.enabled = enabled;
+    public boolean isEnabled() {
+        return enabled;
     }
 
-    public Boolean getVisible() {
+    public boolean getVisible() {
         return visible;
     }
 
-    public void setVisible(Boolean visible) {
-        this.visible = visible;
+    public boolean isVisible() {
+        return visible;
     }
 
-    public Integer getFlags() {
+    public int getFlags() {
         return flags;
-    }
-
-    public void setFlags(Integer flags) {
-        this.flags = flags;
     }
 
     @Override
     public boolean equals(Object o) {
         if (this == o) return true;
-        if (!(o instanceof Word)) return false;
-
-        Word codifier = (Word) o;
-
-        if (word != null ? !word.equals(codifier.word) : codifier.word != null) return false;
-        if (userName != null ? !userName.equals(codifier.userName) : codifier.userName != null) return false;
-        if (createTime != null ? !createTime.equals(codifier.createTime) : codifier.createTime != null) return false;
-        if (updateTime != null ? !updateTime.equals(codifier.updateTime) : codifier.updateTime != null) return false;
-        if (enabled != null ? !enabled.equals(codifier.enabled) : codifier.enabled != null) return false;
-        if (visible != null ? !visible.equals(codifier.visible) : codifier.visible != null) return false;
-        return flags != null ? flags.equals(codifier.flags) : codifier.flags == null;
+        if (o == null || getClass() != o.getClass()) return false;
+        Word word1 = (Word) o;
+        return enabled == word1.enabled
+                && visible == word1.visible
+                && flags == word1.flags
+                && Objects.equals(word, word1.word)
+                && Objects.equals(userName, word1.userName);
     }
 
     @Override
     public int hashCode() {
-        int result = word != null ? word.hashCode() : 0;
-        result = 31 * result + (userName != null ? userName.hashCode() : 0);
-        result = 31 * result + (createTime != null ? createTime.hashCode() : 0);
-        result = 31 * result + (updateTime != null ? updateTime.hashCode() : 0);
-        result = 31 * result + (enabled != null ? enabled.hashCode() : 0);
-        result = 31 * result + (visible != null ? visible.hashCode() : 0);
-        result = 31 * result + (flags != null ? flags.hashCode() : 0);
-        return result;
+        return Objects.hash(word, userName, enabled, visible, flags);
     }
 
     @Override
@@ -258,14 +249,14 @@ public class Word implements Serializable {
         private String userName;
         private LocalDateTime createTime;
         private LocalDateTime updateTime;
-        private Boolean enabled;
-        private Boolean visible;
-        private Integer flags;
+        private boolean enabled;
+        private boolean visible;
+        private int flags;
 
         private Builder() {
         }
 
-        public Builder withWord(String word) {
+        public Builder withWord(@Nonnull String word) {
             this.word = word;
             return this;
         }
@@ -285,31 +276,23 @@ public class Word implements Serializable {
             return this;
         }
 
-        public Builder withEnabled(Boolean enabled) {
+        public Builder withEnabled(boolean enabled) {
             this.enabled = enabled;
             return this;
         }
 
-        public Builder withVisible(Boolean visible) {
+        public Builder withVisible(boolean visible) {
             this.visible = visible;
             return this;
         }
 
-        public Builder withFlags(Integer flags) {
+        public Builder withFlags(int flags) {
             this.flags = flags;
             return this;
         }
 
         public Word build() {
-            Word codifier = new Word();
-            codifier.setWord(word);
-            codifier.setUserName(userName);
-            codifier.setCreateTime(createTime);
-            codifier.setUpdateTime(updateTime);
-            codifier.setEnabled(enabled);
-            codifier.setVisible(visible);
-            codifier.setFlags(flags);
-            return codifier;
+            return new Word(word, userName, createTime, updateTime, enabled, visible, flags);
         }
     }
 }
